isblank fix (#29)
Signed-off-by: Maale, Saivarun <Saivarun.Maale@fmr.com>
Co-authored-by: Maale, Saivarun <Saivarun.Maale@fmr.com>